--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -13,7 +13,7 @@ azure-cosmos==3.2.0
 azure-datalake-store==0.0.49
 azure-functions-devops-build==0.0.22
 azure-graphrbac==0.60.0
-azure-identity==1.5.0b2
+azure-identity==1.6.0b1
 azure-keyvault==1.1.0
 azure-keyvault-administration==4.0.0b1
 azure-mgmt-advisor==2.0.1
@@ -33,7 +33,7 @@ azure-mgmt-containerinstance==1.5.0
 azure-mgmt-containerregistry==3.0.0rc16
 azure-mgmt-containerservice==9.4.0
 azure-mgmt-core==1.2.1
-azure-core==1.8.2
+azure-core==1.12.0b1
 azure-mgmt-cosmosdb==1.0.0
 azure-mgmt-databoxedge==0.2.0
 azure-mgmt-datalake-analytics==0.2.1
